test/compile_errors/stage1/obj/use_of_undeclared_identifier.zig
export fn f() void {
    b = 3;
}

// use of undeclared identifier
//
// tmp.zig:2:5: error: use of undeclared identifier 'b'
